# ProyectoFinalProgra3

./: CMakeLists.txt  README.md  main.cpp  pruebaa.csv
classBusqueda/: busqueda.cpp  busqueda.h
classPelicula/: builder.cpp  builder.h  pelicula.cpp  pelicula.h  procesarCsv.cpp  procesarCsv.h
classUsuario/: usuario.cpp  usuario.h
nodoYarbol/: arbolPeliculas.cpp  arbolPeliculas.h  nodo.cpp  nodo.h
